<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/university_campus"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_universties"
            style="@style/onboardspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/padding_4dp"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/program_applied_to"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_program_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/padding_4dp"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:hint="@string/program_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/program_intake"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_program_intake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/padding_4dp"
            android:minLines="1"
            android:singleLine="true"
            android:gravity="start"
            android:hint="@string/programintake"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/student_number"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_student_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/padding_4dp"
            android:gravity="start"
            android:hint="@string/number"
            android:minLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/padding_200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/visa_date"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/visa_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/padding_4dp"
            android:drawableEnd="@drawable/ic_calender"
            android:drawablePadding="@dimen/padding_8dp"
            android:minLines="1"
            android:singleLine="true"
            android:gravity="start"
            android:hint="@string/Dateof_birth"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>


</LinearLayout>