<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/padding_8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/default_text_color"
                android:singleLine="true"
                android:text="@string/final_arrival_city"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onboardspinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_transport"
                android:singleLine="true"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/default_text_color"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onboardspinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport_number"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/default_text_color"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modeof_transport"
            android:textColorHint="@color/default_text_color"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/padding_8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_date"
                android:textColor="@color/default_text_color"
                android:singleLine="true"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Dateof_birth"
                android:drawableEnd="@drawable/ic_calender"
                android:drawablePadding="@dimen/padding_4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_time"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/default_text_color"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onboardspinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4dp"
            android:text="@string/any_information"
            android:singleLine="true"
            android:fontFamily="@font/sfuitext_regular"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/default_text_color"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:minLines="5"
            android:scrollbars="vertical"
            android:scrollbarSize="@dimen/padding_4dp"
            android:scrollbarStyle="insideInset"
            android:scrollIndicators="end"
            android:isScrollContainer="true"
            android:layout_margin="@dimen/padding_4dp"/>

    </LinearLayout>

</LinearLayout>