<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/padding_4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_of_transport"
                android:layout_marginStart="@dimen/padding_6dp"
                android:textColor="@color/default_text_color"
                android:singleLine="true"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center"
                style="@style/onboardspinner"
                android:layout_marginTop="@dimen/padding_4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airlines"
                android:layout_marginStart="@dimen/padding_4dp"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/default_text_color"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/airlines_name"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColorHint="@color/default_text_color"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/text_size_12sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/padding_8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_country"
                android:layout_marginStart="@dimen/padding_6dp"
                android:textColor="@color/default_text_color"
                android:singleLine="true"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_departure_country"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                style="@style/onboardspinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_city"
                android:layout_marginStart="@dimen/padding_6dp"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/default_text_color"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_departure_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center"
                style="@style/onboardspinner" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/padding_8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_date"
                android:textColor="@color/default_text_color"
                android:singleLine="true"
                android:layout_marginStart="@dimen/padding_6dp"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_departure_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Dateof_birth"
                android:layout_gravity="center"
                android:gravity="start|center"
                android:textSize="@dimen/text_size_12sp"
                android:paddingEnd="@dimen/padding_4dp"
                android:drawableEnd="@drawable/ic_calender"
                android:drawablePadding="@dimen/padding_4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_time"
                android:fontFamily="@font/sfuitext_regular"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginStart="@dimen/padding_6dp"
                android:textColor="@color/default_text_color"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_departure_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center"
                android:layout_marginTop="@dimen/padding_6dp"
                style="@style/onboardspinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_8dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginStart="@dimen/padding_8dp"
            android:fontFamily="@font/sfuitext_regular"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/default_text_color"
            android:text="@string/do_you_have_fligths"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_4dp"
            android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:fontFamily="@font/sfuitext_regular"
                    android:textSize="@dimen/text_size_14sp"
                    android:buttonTint="@color/default_main_color"
                    android:textColor="@color/default_text_color"
                    android:layout_marginEnd="@dimen/padding_10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:fontFamily="@font/sfuitext_regular"
                    android:textSize="@dimen/text_size_14sp"
                    android:buttonTint="@color/default_main_color"
                    android:textColor="@color/default_text_color"
                    android:layout_marginStart="@dimen/padding_10dp"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/padding_8dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/padding_4dp"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="start"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/noof_flights"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/spinner_flights"
            android:layout_width="@dimen/padding_50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:gravity="start|center"
            android:layout_marginStart="@dimen/padding_6dp"
            android:fontFamily="@font/sfuitext_regular"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="@dimen/text_size_12sp"
            android:layout_marginTop="@dimen/padding_4dp"
            android:layout_marginBottom="@dimen/padding_4dp"/>
    </LinearLayout>



</LinearLayout>